AFTER 2.73 - The ability to select the go back icon #42879

Closed
opened 2014-12-11 22:07:06 +01:00 by Aaron Carlisle · 9 comments
Member

System Information
Windows 8.0 Intel HD4600

Blender Version
Broken: 2.72
Worked: Unknown

Short description of error
When selecting multiple files in the file browser you can select the icon to go up in the file hierarchy

Exact steps for others to reproduce the error

  1. open blend
  2. open the file browser
  3. navigate to a folder with many file
  4. select many file with the box selection tool (B Key)
  5. select the icon
**System Information** Windows 8.0 Intel HD4600 **Blender Version** Broken: 2.72 Worked: Unknown **Short description of error** When selecting multiple files in the file browser you can select the icon to go up in the file hierarchy **Exact steps for others to reproduce the error** 1. open blend 2. open the file browser 3. navigate to a folder with many file 4. select many file with the box selection tool (B Key) 5. select the icon
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Hey Aaron, quoting myself from #42498:

you're right, it shouldn't be selectable, but looking at the code, that'd require some rewriting -> moved to ToDo

I'll have a look at it in near future, but I don't think this is an easy fix, it's a bit out of scope of a normal bug report.

Hey Aaron, quoting myself from #42498: >you're right, it shouldn't be selectable, but looking at the code, that'd require some rewriting -> moved to ToDo I'll have a look at it in near future, but I don't think this is an easy fix, it's a bit out of scope of a normal bug report.
Author
Member

I remember looking at that bug didn't see your comment. I can see that it would take a while. Sometimes the smallest bug takes the must coding.

I remember looking at that bug didn't see your comment. I can see that it would take a while. Sometimes the smallest bug takes the must coding.
Member

Just had a second look at it. Not sure what I tried last time, but it was definitely wrong :S
However patch can be found here , will commit after 2.73 release.

Thanks @Blendify :)

Just had a second look at it. Not sure what I tried last time, but it was definitely wrong :S However patch can be found [here ](https://developer.blender.org/D935), will commit after 2.73 release. Thanks @Blendify :)
Bastien Montagne changed title from The ability to select the go back icon to AFTER 2.73 - The ability to select the go back icon 2014-12-12 10:23:26 +01:00
Julian Eisel self-assigned this 2014-12-12 14:50:37 +01:00

This issue was referenced by 76b4fad6db

This issue was referenced by 76b4fad6dbda1b10c8db1acec49c30386c9d9a94
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 76b4fad6db.

Closed by commit 76b4fad6db.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#42879
No description provided.