Fix T42879: File Browser - disable selecting ".." entry (Parent Directory)